renamed packages added getFromUrl to Basic internet fixed ArrayListSerializer to support java 8